--- a/inventory/intended/configs/ENT-DC1-EDGE2.cfg
+++ b/inventory/intended/configs/ENT-DC1-EDGE2.cfg
@@ -20,7 +20,7 @@ logging vrf management host 10.112.112.31 514
 logging source-interface Management1
 logging vrf management source-interface Management1
 !
-hostname ENT-DC2-BORDER1
+hostname ENT-DC1-EDGE2
 ip domain lookup vrf management source-interface Management1
 ip name-server vrf management 1.1.1.1
 dns domain dime-a-tron.com
@@ -86,7 +86,7 @@ vrf instance CORP
 vrf instance management
 !
 interface Port-Channel551
-   description MLAG_PEER_ENT-DC2-BORDER2_Po551
+   description MLAG_PEER_ENT-DC1-EDGE1_Po551
    no shutdown
    switchport
    switchport mode trunk
@@ -94,66 +94,66 @@ interface Port-Channel551
    switchport trunk group MLAG
 !
 interface Ethernet49/1
-   description P2P_LINK_TO_ENT-DC2-SPINE1_Ethernet7/1
+   description P2P_LINK_TO_ENT-DC1-SPINE1_Ethernet8/1
    no shutdown
    mtu 1500
    no switchport
-   ip address 10.2.0.121/31
+   ip address 10.1.0.125/31
 !
 interface Ethernet50/1
-   description P2P_LINK_TO_ENT-DC2-SPINE2_Ethernet7/1
+   description P2P_LINK_TO_ENT-DC1-SPINE2_Ethernet8/1
    no shutdown
    mtu 1500
    no switchport
-   ip address 10.2.0.123/31
+   ip address 10.1.0.127/31
 !
 interface Ethernet51/1
-   description P2P_LINK_TO_ENT-DC2-CORE1_Ethernet51/1
+   description P2P_LINK_TO_ENT-DC1-CORE1_Ethernet52/1
    no shutdown
    mtu 9214
    no switchport
-   ip address 10.0.21.1/31
+   ip address 10.0.11.3/31
    sflow enable
 !
 interface Ethernet52/1
-   description P2P_LINK_TO_ENT-DC2-CORE2_Ethernet51/1
+   description P2P_LINK_TO_ENT-DC1-CORE2_Ethernet52/1
    no shutdown
    mtu 9214
    no switchport
-   ip address 10.0.22.1/31
+   ip address 10.0.12.3/31
    sflow enable
 !
 interface Ethernet55/1
-   description MLAG_PEER_ENT-DC2-BORDER2_Ethernet55/1
+   description MLAG_PEER_ENT-DC1-EDGE1_Ethernet55/1
    no shutdown
    channel-group 551 mode active
 !
 interface Ethernet56/1
-   description MLAG_PEER_ENT-DC2-BORDER2_Ethernet56/1
+   description MLAG_PEER_ENT-DC1-EDGE1_Ethernet56/1
    no shutdown
    channel-group 551 mode active
 !
 interface Loopback0
    description EVPN_Overlay_Peering
    no shutdown
-   ip address 10.2.101.31/32
+   ip address 10.1.101.32/32
 !
 interface Loopback1
    description VTEP_VXLAN_Tunnel_Source
    no shutdown
-   ip address 10.2.102.31/32
+   ip address 10.1.102.31/32
 !
 interface Loopback10
    description CORP_VTEP_DIAGNOSTICS
    no shutdown
    vrf CORP
-   ip address 10.255.10.31/32
+   ip address 10.255.10.32/32
 !
 interface Management1
    description oob_management
    no shutdown
    vrf management
-   ip address 10.99.99.57/24
+   ip address 10.99.99.56/24
 !
 interface Vlan10
    description CORP_GLOBAL_SHARED_10
@@ -172,23 +172,23 @@ interface Vlan3009
    no shutdown
    mtu 1500
    vrf CORP
-   ip address 10.255.252.60/31
+   ip address 10.255.251.61/31
 !
 interface Vlan4093
    description MLAG_PEER_L3_PEERING
    no shutdown
    mtu 1500
-   ip address 10.255.252.60/31
+   ip address 10.255.251.61/31
 !
 interface Vlan4094
    description MLAG_PEER
    no shutdown
    mtu 1500
    no autostate
-   ip address 10.255.255.60/31
+   ip address 10.255.255.61/31
 !
 interface Vxlan1
-   description ENT-DC2-BORDER1_VTEP
+   description ENT-DC1-EDGE2_VTEP
    vxlan source-interface Loopback1
    vxlan virtual-router encapsulation mac-address mlag-system-id
    vxlan udp-port 4789
@@ -200,7 +200,7 @@ mac address-table aging-time 1300
 !
 ip virtual-router mac-address 00:1c:73:00:00:01
 !
-ip address virtual source-nat vrf CORP address 10.255.10.31
+ip address virtual source-nat vrf CORP address 10.255.10.32
 !
 ip access-list standard SNMP-ACL
    10 permit 10.0.0.0/8
@@ -210,13 +210,13 @@ ip routing vrf CORP
 no ip routing vrf management
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
-   seq 10 permit 10.2.101.0/24 eq 32
-   seq 20 permit 10.2.102.0/24 eq 32
+   seq 10 permit 10.1.101.0/24 eq 32
+   seq 20 permit 10.1.102.0/24 eq 32
 !
 mlag configuration
-   domain-id ENT-DC2-BORDER-LEAVES
+   domain-id EnterpriseDC1EdgeLeaves
    local-interface Vlan4094
-   peer-address 10.255.255.61
+   peer-address 10.255.255.60
    peer-link Port-Channel551
    reload-delay mlag 300
    reload-delay non-mlag 330
@@ -235,8 +235,8 @@ route-map RM-MLAG-PEER-IN permit 10
 router bfd
    multihop interval 1200 min-rx 1200 multiplier 3
 !
-router bgp 65216
-   router-id 10.2.101.31
+router bgp 65116
+   router-id 10.1.101.32
    maximum-paths 4 ecmp 4
    no bgp default ipv4-unicast
    distance bgp 20 200 200
@@ -258,50 +258,50 @@ router bgp 65216
    neighbor IPv4-UNDERLAY-PEERS send-community
    neighbor IPv4-UNDERLAY-PEERS maximum-routes 12000
    neighbor MLAG-IPv4-UNDERLAY-PEER peer group
-   neighbor MLAG-IPv4-UNDERLAY-PEER remote-as 65216
+   neighbor MLAG-IPv4-UNDERLAY-PEER remote-as 65116
    neighbor MLAG-IPv4-UNDERLAY-PEER next-hop-self
-   neighbor MLAG-IPv4-UNDERLAY-PEER description ENT-DC2-BORDER2
+   neighbor MLAG-IPv4-UNDERLAY-PEER description ENT-DC1-EDGE1
    neighbor MLAG-IPv4-UNDERLAY-PEER send-community
    neighbor MLAG-IPv4-UNDERLAY-PEER maximum-routes 12000
    neighbor MLAG-IPv4-UNDERLAY-PEER route-map RM-MLAG-PEER-IN in
-   neighbor 10.0.21.0 peer group IPv4-UNDERLAY-PEERS
-   neighbor 10.0.21.0 remote-as 64992
-   neighbor 10.0.21.0 description ENT-DC2-CORE1
-   neighbor 10.0.22.0 peer group IPv4-UNDERLAY-PEERS
-   neighbor 10.0.22.0 remote-as 64992
-   neighbor 10.0.22.0 description ENT-DC2-CORE2
-   neighbor 10.1.101.31 peer group EVPN-OVERLAY-CORE
-   neighbor 10.1.101.31 remote-as 65116
-   neighbor 10.1.101.31 description ENT-DC1-BORDER1
-   neighbor 10.1.101.32 peer group EVPN-OVERLAY-CORE
-   neighbor 10.1.101.32 remote-as 65116
-   neighbor 10.1.101.32 description ENT-DC1-BORDER2
-   neighbor 10.2.0.120 peer group IPv4-UNDERLAY-PEERS
-   neighbor 10.2.0.120 remote-as 65200
-   neighbor 10.2.0.120 description ENT-DC2-SPINE1_Ethernet7/1
-   neighbor 10.2.0.122 peer group IPv4-UNDERLAY-PEERS
-   neighbor 10.2.0.122 remote-as 65200
-   neighbor 10.2.0.122 description ENT-DC2-SPINE2_Ethernet7/1
-   neighbor 10.2.100.1 peer group EVPN-OVERLAY-PEERS
-   neighbor 10.2.100.1 remote-as 65200
-   neighbor 10.2.100.1 description ENT-DC2-SPINE1
-   neighbor 10.2.100.2 peer group EVPN-OVERLAY-PEERS
-   neighbor 10.2.100.2 remote-as 65200
-   neighbor 10.2.100.2 description ENT-DC2-SPINE2
-   neighbor 10.255.252.61 peer group MLAG-IPv4-UNDERLAY-PEER
-   neighbor 10.255.252.61 description ENT-DC2-BORDER2
+   neighbor 10.0.11.2 peer group IPv4-UNDERLAY-PEERS
+   neighbor 10.0.11.2 remote-as 64991
+   neighbor 10.0.11.2 description ENT-DC1-CORE1
+   neighbor 10.0.12.2 peer group IPv4-UNDERLAY-PEERS
+   neighbor 10.0.12.2 remote-as 64991
+   neighbor 10.0.12.2 description ENT-DC1-CORE2
+   neighbor 10.1.0.124 peer group IPv4-UNDERLAY-PEERS
+   neighbor 10.1.0.124 remote-as 65100
+   neighbor 10.1.0.124 description ENT-DC1-SPINE1_Ethernet8/1
+   neighbor 10.1.0.126 peer group IPv4-UNDERLAY-PEERS
+   neighbor 10.1.0.126 remote-as 65100
+   neighbor 10.1.0.126 description ENT-DC1-SPINE2_Ethernet8/1
+   neighbor 10.1.100.1 peer group EVPN-OVERLAY-PEERS
+   neighbor 10.1.100.1 remote-as 65100
+   neighbor 10.1.100.1 description ENT-DC1-SPINE1
+   neighbor 10.1.100.2 peer group EVPN-OVERLAY-PEERS
+   neighbor 10.1.100.2 remote-as 65100
+   neighbor 10.1.100.2 description ENT-DC1-SPINE2
+   neighbor 10.2.101.31 peer group EVPN-OVERLAY-CORE
+   neighbor 10.2.101.31 remote-as 65216
+   neighbor 10.2.101.31 description ENT-DC2-EDGE1
+   neighbor 10.2.101.32 peer group EVPN-OVERLAY-CORE
+   neighbor 10.2.101.32 remote-as 65216
+   neighbor 10.2.101.32 description ENT-DC2-EDGE2
+   neighbor 10.255.251.60 peer group MLAG-IPv4-UNDERLAY-PEER
+   neighbor 10.255.251.60 description ENT-DC1-EDGE1
    redistribute connected route-map RM-CONN-2-BGP
    !
    vlan 10
-      rd 10.2.101.31:10010
-      rd evpn domain remote 10.2.101.31:10010
+      rd 10.1.101.32:10010
+      rd evpn domain remote 10.1.101.32:10010
       route-target both 10010:10010
       route-target import export evpn domain remote 10010:10010
       redistribute learned
    !
    vlan 20
-      rd 10.2.101.31:10020
-      rd evpn domain remote 10.2.101.31:10020
+      rd 10.1.101.32:10020
+      rd evpn domain remote 10.1.101.32:10020
       route-target both 10020:10020
       route-target import export evpn domain remote 10020:10020
       redistribute learned
@@ -319,11 +319,11 @@ router bgp 65216
       neighbor MLAG-IPv4-UNDERLAY-PEER activate
    !
    vrf CORP
-      rd 10.2.101.31:10
+      rd 10.1.101.32:10
       route-target import evpn 10:10
       route-target export evpn 10:10
-      router-id 10.2.101.31
-      neighbor 10.255.252.61 peer group MLAG-IPv4-UNDERLAY-PEER
+      router-id 10.1.101.32
+      neighbor 10.255.251.60 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
 !
 ip tacacs vrf management source-interface Management1
