--- a/inventory/intended/configs/ENT-DC1-SPINE1.cfg
+++ b/inventory/intended/configs/ENT-DC1-SPINE1.cfg
@@ -92,14 +92,14 @@ interface Ethernet4/1
    ip address 10.1.0.12/31
 !
 interface Ethernet7/1
-   description P2P_LINK_TO_ENT-DC1-BORDER1_Ethernet49/1
+   description P2P_LINK_TO_ENT-DC1-EDGE1_Ethernet49/1
    no shutdown
    mtu 1500
    no switchport
    ip address 10.1.0.120/31
 !
 interface Ethernet8/1
-   description P2P_LINK_TO_ENT-DC1-BORDER2_Ethernet49/1
+   description P2P_LINK_TO_ENT-DC1-EDGE2_Ethernet49/1
    no shutdown
    mtu 1500
    no switchport
@@ -168,10 +168,10 @@ router bgp 65100
    neighbor 10.1.0.13 description ENT-DC1-LEAF4_Ethernet49/1
    neighbor 10.1.0.121 peer group IPv4-UNDERLAY-PEERS
    neighbor 10.1.0.121 remote-as 65116
-   neighbor 10.1.0.121 description ENT-DC1-BORDER1_Ethernet49/1
+   neighbor 10.1.0.121 description ENT-DC1-EDGE1_Ethernet49/1
    neighbor 10.1.0.125 peer group IPv4-UNDERLAY-PEERS
    neighbor 10.1.0.125 remote-as 65116
-   neighbor 10.1.0.125 description ENT-DC1-BORDER2_Ethernet49/1
+   neighbor 10.1.0.125 description ENT-DC1-EDGE2_Ethernet49/1
    neighbor 10.1.101.1 peer group EVPN-OVERLAY-PEERS
    neighbor 10.1.101.1 remote-as 65101
    neighbor 10.1.101.1 description ENT-DC1-LEAF1
@@ -186,10 +186,10 @@ router bgp 65100
    neighbor 10.1.101.4 description ENT-DC1-LEAF4
    neighbor 10.1.101.31 peer group EVPN-OVERLAY-PEERS
    neighbor 10.1.101.31 remote-as 65116
-   neighbor 10.1.101.31 description ENT-DC1-BORDER1
+   neighbor 10.1.101.31 description ENT-DC1-EDGE1
    neighbor 10.1.101.32 peer group EVPN-OVERLAY-PEERS
    neighbor 10.1.101.32 remote-as 65116
-   neighbor 10.1.101.32 description ENT-DC1-BORDER2
+   neighbor 10.1.101.32 description ENT-DC1-EDGE2
    redistribute connected route-map RM-CONN-2-BGP
    !
    address-family evpn
