--- a/inventory/intended/configs/ENT-DC2-LEAF2.cfg
+++ b/inventory/intended/configs/ENT-DC2-LEAF2.cfg
@@ -233,7 +233,7 @@ ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 20 permit 10.2.102.0/24 eq 32
 !
 mlag configuration
-   domain-id ENT-DC2-LEAF-DOMAIN-1
+   domain-id EnterpriseDC2LeafDomain1
    local-interface Vlan4094
    peer-address 10.255.255.0
    peer-link Port-Channel551
