--- a/inventory/intended/configs/ENT-DC2-SPINE2.cfg
+++ b/inventory/intended/configs/ENT-DC2-SPINE2.cfg
@@ -92,14 +92,14 @@ interface Ethernet4/1
    ip address 10.2.0.14/31
 !
 interface Ethernet7/1
-   description P2P_LINK_TO_ENT-DC2-BORDER1_Ethernet50/1
+   description P2P_LINK_TO_ENT-DC2-EDGE1_Ethernet50/1
    no shutdown
    mtu 1500
    no switchport
    ip address 10.2.0.122/31
 !
 interface Ethernet8/1
-   description P2P_LINK_TO_ENT-DC2-BORDER2_Ethernet50/1
+   description P2P_LINK_TO_ENT-DC2-EDGE2_Ethernet50/1
    no shutdown
    mtu 1500
    no switchport
@@ -168,10 +168,10 @@ router bgp 65200
    neighbor 10.2.0.15 description ENT-DC2-LEAF4_Ethernet50/1
    neighbor 10.2.0.123 peer group IPv4-UNDERLAY-PEERS
    neighbor 10.2.0.123 remote-as 65216
-   neighbor 10.2.0.123 description ENT-DC2-BORDER1_Ethernet50/1
+   neighbor 10.2.0.123 description ENT-DC2-EDGE1_Ethernet50/1
    neighbor 10.2.0.127 peer group IPv4-UNDERLAY-PEERS
    neighbor 10.2.0.127 remote-as 65216
-   neighbor 10.2.0.127 description ENT-DC2-BORDER2_Ethernet50/1
+   neighbor 10.2.0.127 description ENT-DC2-EDGE2_Ethernet50/1
    neighbor 10.2.101.1 peer group EVPN-OVERLAY-PEERS
    neighbor 10.2.101.1 remote-as 65201
    neighbor 10.2.101.1 description ENT-DC2-LEAF1
@@ -186,10 +186,10 @@ router bgp 65200
    neighbor 10.2.101.4 description ENT-DC2-LEAF4
    neighbor 10.2.101.31 peer group EVPN-OVERLAY-PEERS
    neighbor 10.2.101.31 remote-as 65216
-   neighbor 10.2.101.31 description ENT-DC2-BORDER1
+   neighbor 10.2.101.31 description ENT-DC2-EDGE1
    neighbor 10.2.101.32 peer group EVPN-OVERLAY-PEERS
    neighbor 10.2.101.32 remote-as 65216
-   neighbor 10.2.101.32 description ENT-DC2-BORDER2
+   neighbor 10.2.101.32 description ENT-DC2-EDGE2
    redistribute connected route-map RM-CONN-2-BGP
    !
    address-family evpn
