--- a/inventory/group_vars/EnterpriseDC2Spines.yml
+++ b/inventory/group_vars/EnterpriseDC2Spines.yml
@@ -13,6 +13,10 @@ spine:
       - 'distance bgp 20 200 200'
       - 'graceful-restart restart-time 300'
       - 'graceful-restart'
+    raw_eos_cli: |-
+      interface Management1
+      no lldp transmit
+      no lldp receive
   nodes:
     ENT-DC2-SPINE1:
       id: 1
