--- a/inventory/intended/configs/ENT-DC2-EDGE1.cfg
+++ b/inventory/intended/configs/ENT-DC2-EDGE1.cfg
@@ -147,7 +147,7 @@ interface Loopback10
    description CORP_VTEP_DIAGNOSTICS
    no shutdown
    vrf CORP
-   ip address 10.255.10.31/32
+   ip address 10.255.20.31/32
 !
 interface Management1
    description oob_management
@@ -200,7 +200,7 @@ mac address-table aging-time 1300
 !
 ip virtual-router mac-address 00:1c:73:00:00:01
 !
-ip address virtual source-nat vrf CORP address 10.255.10.31
+ip address virtual source-nat vrf CORP address 10.255.20.31
 !
 ip access-list standard SNMP-ACL
    10 permit 10.0.0.0/8
@@ -233,7 +233,7 @@ route-map RM-MLAG-PEER-IN permit 10
    set origin incomplete
 !
 router bfd
-   multihop interval 1200 min-rx 1200 multiplier 3
+   multihop interval 15000 min-rx 15000 multiplier 5
 !
 router bgp 65216
    router-id 10.2.101.31
@@ -359,5 +359,9 @@ management api http-commands
    !
    vrf management
       no shutdown
+!
+interface Management1
+no lldp transmit
+no lldp receive
 !
 end
