--- a/inventory/intended/configs/ENT-DC2-SPINE1.cfg
+++ b/inventory/intended/configs/ENT-DC2-SPINE1.cfg
@@ -135,7 +135,7 @@ route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
 !
 router bfd
-   multihop interval 1200 min-rx 1200 multiplier 3
+   multihop interval 15000 min-rx 15000 multiplier 5
 !
 router bgp 65200
    router-id 10.2.100.1
@@ -232,5 +232,9 @@ management api http-commands
    !
    vrf management
       no shutdown
+!
+interface Management1
+no lldp transmit
+no lldp receive
 !
 end
