--- a/inventory/intended/configs/ENT-DC1-LEAF4.cfg
+++ b/inventory/intended/configs/ENT-DC1-LEAF4.cfg
@@ -252,7 +252,7 @@ route-map RM-MLAG-PEER-IN permit 10
    set origin incomplete
 !
 router bfd
-   multihop interval 1200 min-rx 1200 multiplier 3
+   multihop interval 15000 min-rx 15000 multiplier 5
 !
 router bgp 65102
    router-id 10.1.101.4
@@ -362,5 +362,9 @@ management api http-commands
    !
    vrf management
       no shutdown
+!
+interface Management1
+no lldp transmit
+no lldp receive
 !
 end
