--- a/inventory/intended/configs/ENT-DC2-LEAF3.cfg
+++ b/inventory/intended/configs/ENT-DC2-LEAF3.cfg
@@ -152,7 +152,7 @@ interface Loopback10
    description CORP_VTEP_DIAGNOSTICS
    no shutdown
    vrf CORP
-   ip address 10.255.10.3/32
+   ip address 10.255.20.3/32
 !
 interface Management1
    description oob_management
@@ -219,7 +219,7 @@ mac address-table aging-time 1300
 !
 ip virtual-router mac-address 00:1c:73:00:00:01
 !
-ip address virtual source-nat vrf CORP address 10.255.10.3
+ip address virtual source-nat vrf CORP address 10.255.20.3
 !
 ip access-list standard SNMP-ACL
    10 permit 10.0.0.0/8
@@ -252,7 +252,7 @@ route-map RM-MLAG-PEER-IN permit 10
    set origin incomplete
 !
 router bfd
-   multihop interval 1200 min-rx 1200 multiplier 3
+   multihop interval 15000 min-rx 15000 multiplier 5
 !
 router bgp 65202
    router-id 10.2.101.3
@@ -362,5 +362,9 @@ management api http-commands
    !
    vrf management
       no shutdown
+!
+interface Management1
+no lldp transmit
+no lldp receive
 !
 end
