--- a/inventory/intended/structured_configs/ENT-DC1-LEAF3-debug-vars.yml
+++ b/inventory/intended/structured_configs/ENT-DC1-LEAF3-debug-vars.yml
@@ -101,7 +101,11 @@ tenants:
     vrf_vni: 10
     vtep_diagnostic:
       loopback: 10
-      loopback_ip_range: 10.255.10.0/24
+      loopback_ip_pools:
+      - pod: EnterpriseDC1
+        ipv4_pool: 10.255.10.0/24
+      - pod: EnterpriseDC2
+        ipv4_pool: 10.255.20.0/24
     svis:
     - id: 10
       name: CORP_GLOBAL_SHARED_10
@@ -152,6 +156,7 @@ tenants:
       enabled: true
       ip_address_virtual: 10.212.212.1/24
 fabric_name: EnterpriseDC
+pod_name: EnterpriseDC1
 daemon_terminattr:
   cvaddrs:
   - apiserver.arista.io:443
@@ -288,9 +293,9 @@ aliases: 'alias 1min show log last 1 minute
   alias tail bash sudo tail -f /var/log/messages'
 p2p_uplinks_mtu: 1500
 bfd_multihop:
-  interval: 1200
-  min_rx: 1200
-  multiplier: 3
+  interval: 15000
+  min_rx: 15000
+  multiplier: 5
 type: l3leaf
 l3leaf:
   defaults:
@@ -316,6 +321,11 @@ l3leaf:
     - graceful-restart restart-time 300
     - graceful-restart
     spanning_tree_mode: mstp
+    raw_eos_cli: 'interface Management1
+
+      no lldp transmit
+
+      no lldp receive'
   node_groups:
     EnterpriseDC1LeafDomain1:
       bgp_as: 65101
@@ -2411,7 +2421,7 @@ groups:
   - ENT-DC2-LEAF4
   - ENT-DC2-EDGE1
   - ENT-DC2-EDGE2
-omit: __omit_place_holder__aa8a0430361a8678e8c97510f7ca689dbdde9931
+omit: __omit_place_holder__7a91eceaa851204c40e4e72d1b3b10441baedbea
 ansible_version:
   string: 2.14.8
   full: 2.14.8
